testsuite/tests/polykinds/T7438.stderr

T7438.hs:6:14: error:
    • Couldn't match expected type ‘t2’ with actual type ‘t3’
        ‘t2’ is untouchable
          inside the constraints: t ~ t1
          bound by a pattern with constructor:
                     Nil :: forall k (a :: k). Thrist a a,
                   in an equation for ‘go’
          at T7438.hs:6:4-6
      ‘t2’ is a rigid type variable bound by
        the inferred type of go :: Thrist t1 t -> t3 -> t2 at T7438.hs:6:1
      ‘t3’ is a rigid type variable bound by
        the inferred type of go :: Thrist t1 t -> t3 -> t2 at T7438.hs:6:1
      Possible fix: add a type signature for ‘go’
    • In the expression: acc
      In an equation for ‘go’: go Nil acc = acc
    • Relevant bindings include
        acc :: t3 (bound at T7438.hs:6:8)
        go :: Thrist t1 t -> t3 -> t2 (bound at T7438.hs:6:1)
